--- a/border.html
+++ b/border.html
@@ -25,9 +25,9 @@
      <p class="one">
      The Wonderful Parliament was a session of the English parliament held from October to November 1386 in Westminster Abbey. Called by King Richard II (pictured) to address his need for money, it attempted to reform his administration. Richard had become increasingly unpopular due to perceived extravagance towards his political favourites and the unsuccessful prosecution of war against France. Discontent climaxed when Richard requested a then-unprecedented sum to raise an army. The House of Lords and the House of Commons united against him and his unpopular chancellor, Michael de la Pole, demanding the latter's impeachment. Richard requested the Commons send a delegation to negotiate; Parliament, fearing an ambush, sent two lords instead. The lords threatened Richard with deposition until he agreed to do Parliament's bidding. He was forced to sack de la Pole and was restricted to advisers appointed by parliament. 
      </p>
-     <p class="two">
+     <!--<p class="two">
      	The Wonderful Parliament was a session of the English parliament held from October to November 1386 in Westminster Abbey. Called by King Richard II (pictured) to address his need for money, it attempted to reform his administration. Richard had become increasingly unpopular due to perceived extravagance towards his political favourites and the unsuccessful prosecution of war against France. Discontent climaxed when Richard requested a then-unprecedented sum to raise an army. The House of Lords and the House of Commons united against him and his unpopular chancellor, Michael de la Pole, demanding the latter's impeachment. Richard requested the Commons send a delegation to negotiate; Parliament, fearing an ambush, sent two lords instead. The lords threatened Richard with deposition until he agreed to do Parliament's bidding. He was forced to sack de la Pole and was restricted to advisers appointed by parliament. 
-     </p>
+     </p>-->
 
 
 </body>
